Fix tests due to Mockito changes of behaviour in the new version